<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.5</version>
        <relativePath/>
    </parent>

    <groupId>br.com.fiap</groupId>
    <artifactId>video-upload-ms</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>
    <name>Video Upload MS</name>
    <description>FIAP X - Video Upload Microservice</description>

    <modules>
        <module>domain</module>
        <module>application</module>
        <module>infrastructure</module>
        <module>report-aggregate</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <mockito.version>5.14.2</mockito.version>
        <cucumber.version>7.18.1</cucumber.version>
        <jacoco.version>0.8.13</jacoco.version>
        <sonar.projectKey>fiap-14soat-tc-fase5-video-upload</sonar.projectKey>
        <sonar.organization>rocky2025</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
        <sonar.java.source>21</sonar.java.source>
        <sonar.coverage.jacoco.xmlReportPaths>**/target/site/jacoco/jacoco.xml,**/target/site/jacoco-aggregate/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
        <sonar.junit.reportPaths>**/target/surefire-reports,**/target/failsafe-reports</sonar.junit.reportPaths>
        <sonar.exclusions>**/generated/**,**/target/**</sonar.exclusions>
    </properties>

    <profiles>
        <profile>
            <id>coverage</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.jacoco</groupId>
                        <artifactId>jacoco-maven-plugin</artifactId>
                        <version>${jacoco.version}</version>
                        <configuration>
                            <excludes>
                                <exclude>**/VideoUploadApplication.class</exclude>
                            </excludes>
                        </configuration>
                        <executions>
                            <execution>
                                <id>prepare-agent</id>
                                <phase>initialize</phase>
                                <goals><goal>prepare-agent</goal></goals>
                                <configuration>
                                    <destFile>${project.build.directory}/jacoco.exec</destFile>
                                    <propertyName>jacoco.surefireArgLine</propertyName>
                                </configuration>
                            </execution>
                            <execution>
                                <id>report</id>
                                <phase>verify</phase>
                                <goals><goal>report</goal></goals>
                                <configuration>
                                    <dataFile>${project.build.directory}/jacoco.exec</dataFile>
                                    <outputDirectory>${project.build.directory}/site/jacoco</outputDirectory>
                                </configuration>
                            </execution>
                            <execution>
                                <id>check-coverage</id>
                                <phase>verify</phase>
                                <goals><goal>check</goal></goals>
                                <configuration>
                                    <dataFile>${project.build.directory}/jacoco.exec</dataFile>
                                    <rules>
                                        <rule>
                                            <element>BUNDLE</element>
                                            <limits>
                                                <limit>
                                                    <counter>INSTRUCTION</counter>
                                                    <value>COVEREDRATIO</value>
                                                    <minimum>0.80</minimum>
                                                </limit>
                                            </limits>
                                        </rule>
                                    </rules>
                                    <excludes>
                                        <exclude>**/VideoUploadApplication.class</exclude>
                                        <exclude>**/AwsSqsConfiguration.class</exclude>
                                        <exclude>**/SwaggerConfiguration.class</exclude>
                                        <exclude>**/JpaConfiguration.class</exclude>
                                        <exclude>**/VideoStorageBeanConfiguration.class</exclude>
                                    </excludes>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <argLine>@{jacoco.surefireArgLine} -Dnet.bytebuddy.experimental=true</argLine>
                            <systemPropertyVariables>
                                <spring.profiles.active>test</spring.profiles.active>
                            </systemPropertyVariables>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <profile>
            <id>sonar</id>
            <activation><activeByDefault>false</activeByDefault></activation>
        </profile>
    </profiles>
</project>
